# candy

./: Cargo.toml  candy.json  init.json  rustc-ice-2024-08-06T08_56_20-23952.txt  rustc-ice-2024-08-24T04_53_32-63221.txt  rustc-ice-2024-08-24T04_53_32-63222.txt  rustc-ice-2024-08-24T04_53_35-63292.txt  rustc-ice-2024-08-24T04_53_35-63293.txt  rustc-ice-2024-08-24T04_53_39-63331.txt  rustc-ice-2024-08-24T04_53_39-63332.txt  rustc-ice-2024-08-24T04_53_55-63553.txt  rustc-ice-2024-08-24T04_53_55-63554.txt
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
