[package]
name = "candy"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = {version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5"
x86_64 = "0.15.1"
uart_16550 = "0.2.0"
pic8259 = "0.10.0"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = {version = "0.3.11", default-features = false, features = ["alloc"]}
conquer-once = { version = "0.2.0", default-features = false}
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"]}

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

# [build-dependencies]
# bootimage = "0.10.3"

# [package.metadata.bootimage]
# target = "x86_64-unknown-none"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 
test-timeout = 10



[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
